--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -23,8 +23,6 @@
   justify-content: center;
 }
 
-
-
 .video-banner {
     width: 100%;
     aspect-ratio: 21 / 7; /* Cinematic ratio */
@@ -44,16 +42,6 @@
     z-index: 1;
 }
 
-/* .video-overlay-content {
-  position: relative;
-  z-index: 2;
-  text-align: center;
-  color: white;
-  padding: 20px;
-  background-color: rgba(0, 0, 0, 0.5); 
-  backdrop-filter: blur(2px); 
-  border-radius: 8px; 
-} */
 
 .video-overlay {
   position: absolute;
@@ -108,6 +96,7 @@
 }
 .media-card {
     background-color: #e6e5e5;
+    max-height: 500px;
     transition: transform 0.3s ease, background-color 0.3s ease;
 }
 
