--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -42,7 +42,6 @@
     z-index: 1;
 }
 
-
 .video-overlay {
   position: absolute;
   top: 0;
@@ -96,26 +95,24 @@
 }
 .media-card {
     background-color: #e6e5e5;
+    border-radius: 10px;
     max-height: 500px;
     transition: transform 0.3s ease, background-color 0.3s ease;
 }
 
 .media-card:hover {
     transform: translateY(-5px);
-    background-color: #fce8e1;
+    background-color: var( --off-white-color);
 }
 
 .media-card .card-title {
-    color: #f8621b;
-    font-weight: bold;
+    color: var(--primary-color);
 }
 
 .media-img {
     width: 100%;
     height: 180px;
     object-fit: cover;
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 10px;
     background-color: var(--white-text);
 }
 
@@ -128,7 +125,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  border-radius: 8px;
+  border-radius: 10px;
   overflow: hidden; /* Ensures image doesn't overflow on zoom */
   transition: transform 0.2s ease-out, background-color 0.2s ease-out;
   will-change: transform;
@@ -136,7 +133,7 @@
 
 .research-card:hover {
   transform: translateY(-5px);
-  background-color: #fce8e1;
+  background-color: var(--off-white-color);
 }
 
 .research-card .card-img-top {
@@ -221,6 +218,9 @@ color: var(--gray-complement);
     }
 
     /* <!-- Add this custom CSS for hover animations --> */
+    .research-card .card-title {
+    color: var(--primary-color);
+}
   .card-hover {
     transition: transform 0.4s ease, box-shadow 0.4s ease, border 0.4s ease;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
@@ -229,15 +229,14 @@ color: var(--gray-complement);
     position: relative;
     }
 
-    .card-hover::before {
+    /* .card-hover::before {
         content: "";
         position: absolute;
         inset: 0;
-        border-radius: 15px;
         background: linear-gradient(45deg, rgba(248, 98, 27, 0.3), rgba(230, 229, 229, 0.3));
         opacity: 0;
         transition: opacity 0.4s ease;
-    }
+    } */
 
     .card-hover:hover {
         transform: translateY(-8px);
@@ -263,7 +262,7 @@ color: var(--gray-complement);
   }
 
   .about-title {
-    color: #f8621b;
+    color: var(--primary-color);
     font-weight: bold;
   }
 
@@ -352,11 +351,3 @@ color: var(--gray-complement);
       opacity: 1;
     }
   }           
-/* contact----------------------------------------------- */
-.map-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 30px 0;
-  background-color: #f5f5f5; /* optional background */
-}
