--- a/styles/media-resource-navbar.css
+++ b/styles/media-resource-navbar.css
@@ -120,7 +120,22 @@
     top: 0;
     z-index: 999;
   }
+  .navbar-logo {
+    display: block;
+    color: var(--white-text);
+    margin-left: 10px;
+  }
+  .logo-text {
+  color: white;
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.6); /* X, Y, blur, color */
+  font-weight: bold;
+  margin: 0;
+}
 
+  .navbar-logo img.mobile-logo {
+    height: 50px;
+    width: auto;
+  }
   .navbar .navbar-toggler {
     position: absolute;
     right: 20px;
