--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -151,7 +151,22 @@
     z-index: 999;
     flex-wrap: nowrap;
   }
+  .navbar-logo {
+    display: block;
+    margin-left: 10px;
+  }
+  .logo-text {
+  color: white;
+  font-size: 1rem;
+  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.6); /* X, Y, blur, color */
+  font-weight: bold;
+  margin: 0;
+}
 
+  .navbar-logo img.mobile-logo {
+    height: 50px;
+    width: auto;
+  }
   .navbar .navbar-toggler {
     margin-left: auto;
   }
