fixed bugs and the research_section css ui and ux

--- a/styles/global.css
+++ b/styles/global.css
@@ -77,7 +77,12 @@ body {
   }
   
 }
-
+.read-more {
+  display: inline-block;
+  margin-top: 5px;
+  font-size: 0.9em;
+  color: var(--complementary-color);
+}
 .hr {
   border: none;
   border-top: 2px solid var(--primary-color); /* 4px thick black line */
