--- a/assets/css/sdg.css
+++ b/assets/css/sdg.css
@@ -24,8 +24,8 @@
 .image-column {
   flex: 1 1 33.333%;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: start;
+  justify-content: start;
   padding: 20px;
 }
 
@@ -96,5 +96,8 @@
 
   .text-column {
     overflow-y: visible;
+  }
+  .image-column {
+    order: -1;
   }
 }
